page heading to customers and portfolio added

--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,7 +1,6 @@
-<div class="portfolioDesc">
-  <div class="porText">
-    <h1>Portfolio</h1>
-
+<div>
+  <h1 class="page-heading"><span class="p-3">Portfolio</span></h1>
+  <div class="porText portfolioDesc">
     <p class="porPara">
       Welcome to my portfolio, a curated collection of my most cherished
       wildlife photographs. Each image you see here is a product of countless
