--- a/src/app/homepage/homepage.component.css
+++ b/src/app/homepage/homepage.component.css
@@ -1,8 +1,9 @@
 .hero-container {
   position: relative;
   text-align: center;
-  color: #ECF39E;
+  color: var(--cream);
   height: 100vh;
+  box-shadow: 0px 15px 30px 15px rgb(11, 19, 12);
 }
 
 .hero-container img {
@@ -18,7 +19,7 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
-  z-index: 1; 
+  z-index: 1;
 }
 
 .hero-text {
