Sllider added, Navbar animation fixed with the specified things. sma adjustments made

--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,7 +1,7 @@
 <div class="portfolioDesc">
   <div class="porText">
     <h1>Portfolio</h1>
-
+    <app-extra1></app-extra1>
     <p class="porPara">
       Welcome to my portfolio, a curated collection of my most cherished
       wildlife photographs. Each image you see here is a product of countless
