--- a/src/app/customers/customers.component.html
+++ b/src/app/customers/customers.component.html
@@ -1,4 +1,4 @@
-<div class="bg-white py-5 py-sm-6 border-padding">
+<div class="bg-white py-5 py-sm-6 border-padding extra-top-padding">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-lg-6 text-center text-lg-start">
