--- a/src/app/customers/customers.component.html
+++ b/src/app/customers/customers.component.html
@@ -4,7 +4,7 @@
   </h1>
   <div class="row mt-5 mt-sm-6 pt-5 pt-sm-6">
     <div
-      class="col-lg-4 d-flex flex-column align-items-start mb-4"
+      class="col-lg-4 d-flex flex-column align-items-start mb-4 px-4"
       *ngFor="let customer of customers; index as icustomer"
     >
       <div class="post-container">
