inserted swiper component

--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,5 +1,9 @@
 <div>
   <h1 class="page-heading"><span class="p-3">Portfolio</span></h1>
+  <div class="p-3">
+    <app-extra1></app-extra1>
+  </div>
+
   <div class="porText portfolioDesc">
     <p class="porPara">
       Welcome to my portfolio, a curated collection of my most cherished
