--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="container">
   <h1 class="page-heading"><span class="p-3">Get to know me</span></h1>
   <div class="about-div singularPart">
     <img class="about-img shadowImg" src="/images/photographer.jpg" alt="" />
