--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -10,7 +10,8 @@
     </p>
   </div>
 </div>
-<div>
+
+<div class="container">
   <div class="my-4 heading-div">
     <h2 class="mb-5 heading"><span class="p-4">My Awards</span></h2>
     <app-awards></app-awards>
