Changed swipper imgs

--- a/src/app/extra1/extra1.component.html
+++ b/src/app/extra1/extra1.component.html
@@ -1,148 +1,148 @@
 <div class="bg-dark box-swiper-size">
-<swiper-container
-  class="mySwiper"
-  keyboard="true"
-  space-between="40"
-  navigation="true"
-  autoplay-delay="4000"
-  autoplay-disable-on-interaction="false"
-  speed="1000"
-  thumbs-swiper=".mySwiper2"
->
-  <swiper-slide>
-    <div class="image-container">
-      <img
-        src="https://swiperjs.com/demos/images/nature-1.jpg"
-        alt="Nature Image 1"
-        class="image"
-      />
-    </div>
-  </swiper-slide>
-  <swiper-slide>
-    <div class="image-container">
-      <img
-        src="https://swiperjs.com/demos/images/nature-2.jpg"
-        alt="Nature Image 2"
-        class="image"
-      />
-    </div>
-  </swiper-slide>
-  <swiper-slide>
-    <div class="image-container">
-      <img
-        src="https://swiperjs.com/demos/images/nature-3.jpg"
-        alt="Nature Image 3"
-        class="image"
-      />
-    </div>
-  </swiper-slide>
-  <swiper-slide>
-    <div class="image-container">
-      <img
-        src="https://swiperjs.com/demos/images/nature-4.jpg"
-        alt="Nature Image 4"
-        class="image"
-      />
-    </div>
-  </swiper-slide>
-</swiper-container>
+  <swiper-container
+    class="mySwiper"
+    keyboard="true"
+    space-between="40"
+    navigation="true"
+    autoplay-delay="4000"
+    autoplay-disable-on-interaction="false"
+    speed="1000"
+    thumbs-swiper=".mySwiper2"
+  >
+    <swiper-slide>
+      <div class="image-container">
+        <img
+          src="https://cdn.pixabay.com/photo/2023/05/21/06/00/bird-8007868_640.jpg"
+          alt="Nature Image 1"
+          class="image"
+        />
+      </div>
+    </swiper-slide>
+    <swiper-slide>
+      <div class="image-container">
+        <img
+          src="https://cdn.pixabay.com/photo/2020/01/07/06/22/peacock-4746848_640.jpg"
+          alt="Nature Image 2"
+          class="image"
+        />
+      </div>
+    </swiper-slide>
+    <swiper-slide>
+      <div class="image-container">
+        <img
+          src="https://cdn.pixabay.com/photo/2018/07/14/17/46/raccoon-3538081_640.jpg"
+          alt="Nature Image 3"
+          class="image"
+        />
+      </div>
+    </swiper-slide>
+    <swiper-slide>
+      <div class="image-container">
+        <img
+          src="https://cdn.pixabay.com/photo/2016/05/02/13/17/deer-1367217_640.jpg"
+          alt="Nature Image 4"
+          class="image"
+        />
+      </div>
+    </swiper-slide>
+  </swiper-container>
 
-<swiper-container
-  class="mySwiper2 p-3"
-  space-between="10"
-  slides-per-view="4"
-  free-mode="true"
-  watch-slides-progress="true"
->
-  <swiper-slide>
-    <div class="thumb-container">
-      <img
-        src="https://swiperjs.com/demos/images/nature-1.jpg"
-        alt="Nature Image 1"
-        class="thumb-image"
-      />
-    </div>
-  </swiper-slide>
-  <swiper-slide>
-    <div class="thumb-container">
-      <img
-        src="https://swiperjs.com/demos/images/nature-2.jpg"
-        alt="Nature Image 2"
-        class="thumb-image"
-      />
-    </div>
-  </swiper-slide>
-  <swiper-slide>
-    <div class="thumb-container">
-      <img
-        src="https://swiperjs.com/demos/images/nature-3.jpg"
-        alt="Nature Image 3"
-        class="thumb-image"
-      />
-    </div>
-  </swiper-slide>
-  <swiper-slide>
-    <div class="thumb-container">
-      <img
-        src="https://swiperjs.com/demos/images/nature-4.jpg"
-        alt="Nature Image 4"
-        class="thumb-image"
-      />
-    </div>
-  </swiper-slide>
-  <swiper-slide>
-    <div class="thumb-container">
-      <img
-        src="https://swiperjs.com/demos/images/nature-5.jpg"
-        alt="Nature Image 5"
-        class="thumb-image"
-      />
-    </div>
-  </swiper-slide>
-  <swiper-slide>
-    <div class="thumb-container">
-      <img
-        src="https://swiperjs.com/demos/images/nature-6.jpg"
-        alt="Nature Image 6"
-        class="thumb-image"
-      />
-    </div>
-  </swiper-slide>
-  <swiper-slide>
-    <div class="thumb-container">
-      <img
-        src="https://swiperjs.com/demos/images/nature-7.jpg"
-        alt="Nature Image 7"
-        class="thumb-image"
-      />
-    </div>
-  </swiper-slide>
-  <swiper-slide>
-    <div class="thumb-container">
-      <img
-        src="https://swiperjs.com/demos/images/nature-8.jpg"
-        alt="Nature Image 8"
-        class="thumb-image"
-      />
-    </div>
-  </swiper-slide>
-  <swiper-slide>
-    <div class="thumb-container">
-      <img
-        src="https://swiperjs.com/demos/images/nature-9.jpg"
-        alt="Nature Image 9"
-        class="thumb-image"
-      />
-    </div>
-  </swiper-slide>
-  <swiper-slide>
-    <div class="thumb-container">
-      <img
-        src="https://swiperjs.com/demos/images/nature-10.jpg"
-        alt="Nature Image 10"
-        class="thumb-image"
-      />
-    </div>
-  </swiper-slide>
-</swiper-container>
+  <swiper-container
+    class="mySwiper2 p-3"
+    space-between="10"
+    slides-per-view="4"
+    free-mode="true"
+    watch-slides-progress="true"
+  >
+    <swiper-slide>
+      <div class="thumb-container">
+        <img
+          src="https://cdn.pixabay.com/photo/2023/05/21/06/00/bird-8007868_640.jpg"
+          alt="Nature Image 1"
+          class="thumb-image"
+        />
+      </div>
+    </swiper-slide>
+    <swiper-slide>
+      <div class="thumb-container">
+        <img
+          src="https://cdn.pixabay.com/photo/2020/01/07/06/22/peacock-4746848_640.jpg"
+          alt="Nature Image 2"
+          class="thumb-image"
+        />
+      </div>
+    </swiper-slide>
+    <swiper-slide>
+      <div class="thumb-container">
+        <img
+          src="https://cdn.pixabay.com/photo/2018/07/14/17/46/raccoon-3538081_640.jpg"
+          alt="Nature Image 3"
+          class="thumb-image"
+        />
+      </div>
+    </swiper-slide>
+    <swiper-slide>
+      <div class="thumb-container">
+        <img
+          src="https://cdn.pixabay.com/photo/2016/05/02/13/17/deer-1367217_640.jpg"
+          alt="Nature Image 4"
+          class="thumb-image"
+        />
+      </div>
+    </swiper-slide>
+    <swiper-slide>
+      <div class="thumb-container">
+        <img
+          src="https://swiperjs.com/demos/images/nature-5.jpg"
+          alt="Nature Image 5"
+          class="thumb-image"
+        />
+      </div>
+    </swiper-slide>
+    <swiper-slide>
+      <div class="thumb-container">
+        <img
+          src="https://swiperjs.com/demos/images/nature-6.jpg"
+          alt="Nature Image 6"
+          class="thumb-image"
+        />
+      </div>
+    </swiper-slide>
+    <swiper-slide>
+      <div class="thumb-container">
+        <img
+          src="https://swiperjs.com/demos/images/nature-7.jpg"
+          alt="Nature Image 7"
+          class="thumb-image"
+        />
+      </div>
+    </swiper-slide>
+    <swiper-slide>
+      <div class="thumb-container">
+        <img
+          src="https://swiperjs.com/demos/images/nature-8.jpg"
+          alt="Nature Image 8"
+          class="thumb-image"
+        />
+      </div>
+    </swiper-slide>
+    <swiper-slide>
+      <div class="thumb-container">
+        <img
+          src="https://swiperjs.com/demos/images/nature-9.jpg"
+          alt="Nature Image 9"
+          class="thumb-image"
+        />
+      </div>
+    </swiper-slide>
+    <swiper-slide>
+      <div class="thumb-container">
+        <img
+          src="https://swiperjs.com/demos/images/nature-10.jpg"
+          alt="Nature Image 10"
+          class="thumb-image"
+        />
+      </div>
+    </swiper-slide>
+  </swiper-container>
 </div>
