Minor changes in about me

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -16,7 +16,7 @@
   </div>
   <div class="awards singularPart">
     <div class="aboutText">
-      <h4 class="heading"><span class="p-4">Awards and Recognition</span></h4>
+      <h4 class="heading"><span class="p-4">Awards</span></h4>
       <p>
         I am honored to have received prestigious accolades in the field of
         wildlife photography, including the Wild Photo Award and the British
@@ -44,7 +44,7 @@
     <img class="shadowImg about-img" src="/images/conservation.jpg" alt="" />
     <div class="aboutText about-text">
       <h4 class="heading">
-        <span class="p-4">Conservation and Advocacy</span>
+        <span class="p-4">Protection</span>
       </h4>
       <p>
         Beyond photography, I am deeply committed to wildlife conservation. I
@@ -60,7 +60,7 @@
     <img class="shadowImg about-img" src="/images/adventure.jpg" alt="" />
     <div class="aboutText about-text">
       <h4 class="heading">
-        <span class="p-4">Join Me on This Adventure</span>
+        <span class="p-4">Adventure</span>
       </h4>
       <p>
         I invite you to explore my portfolio and join me on this incredible
