Minor changes about page

--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,16 +1,18 @@
 <div class="hero-container">
-  <div class="overlay"></div>
-  <img src="images/ostrich.jpg" alt="ostrich" />
-  <div class="hero-text">
-    <h1>Welcome to</h1>
-    <h2>The Animal Kingdom</h2>
-    <p>
-      Join me on an exciting journey through the lens as we explore the wild and
-      capture the beautiful moments of animal life.
-    </p>
+  <div class="overlay">
+    <img src="images/ostrich.jpg" alt="ostrich" />
+    <div class="overlay">
+      <div class="hero-text">
+        <h1>Welcome to</h1>
+        <h2>The Animal Kingdom</h2>
+        <p>
+          Join me on an exciting journey through the lens as we explore the wild
+          and capture the beautiful moments of animal life.
+        </p>
+      </div>
+    </div>
   </div>
 </div>
-
 <div class="container">
   <div class="my-4 heading-div">
     <h2 class="mb-5 heading"><span class="p-4">My Awards</span></h2>
