portfolio responsive margins

--- a/src/app/portfolio/portfolio.component.css
+++ b/src/app/portfolio/portfolio.component.css
@@ -47,3 +47,13 @@
 .porPara {
   padding-top: 3vh;
 }
+
+@media (width <= 768px){
+  .portfolioDesc {
+    padding-block: 2vh;
+    padding-inline: 3vh;
+  }
+  .porText {
+    margin-inline: 3vh;
+  }
+}
