--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -18,16 +18,16 @@
     <h2 class="mb-5 heading"><span class="p-4">My Awards</span></h2>
     <app-awards></app-awards>
   </div>
-  <div class="my-4">
+  <div>
     <h2 class="mb-5 heading"><span class="p-4">Customer opinions</span></h2>
     <app-testimonial></app-testimonial>
-    <p>
+    <p class="more-customers">
       To see more of what my satisfied customers have to say about working with
       me, and about the quality of work I am able to provide for them,
-      <a routerLink="customers">CLICK HERE</a>!
+      <a routerLink="customers">click here</a>!
     </p>
   </div>
-  <div>
+  <div class="newsletter-container">
     <app-newsletter></app-newsletter>
   </div>
 </div>
