margin bottom after button added

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -132,7 +132,7 @@
 
             <button
               type="submit"
-              class="contact-button mt-3"
+              class="contact-button mt-3 mb-5"
               [disabled]="!contactForm.valid"
             >
               Send Email
