--- a/src/app/testimonial/testimonial.component.html
+++ b/src/app/testimonial/testimonial.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="row row-cols-lg-3 mt-5 mt-sm-6 pt-5 pt-sm-6 mb-4 alig">
+  <div class="row row-cols-lg-3 row-cols-md-2 mt-5 mt-sm-6 pt-5 pt-sm-6 mb-4 alig">
     <div class="post-container" style="max-width: 26rem">
       <div class="post-content">
         <div class="d-flex align-items-center gap-2 text-xs">
