--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div>
-    <h1 class="page-heading"><span class="">Portfolio</span></h1>
+    <h1 class="page-heading"><span class="p-3">Portfolio</span></h1>
     <div>
       <app-extra1></app-extra1>
     </div>
