--- a/src/app/customers/customers.component.html
+++ b/src/app/customers/customers.component.html
@@ -1,7 +1,8 @@
 <div class="container">
   <h1 class="page-heading">
-    <span class="p-3">What others think about my work</span>
+    <span class="p-3">Customers</span>
   </h1>
+  <p class="text-center customMargin">What my customers think about my work:</p>
   <div class="row mt-5 mt-sm-6 pt-5 pt-sm-6">
     <div
       class="col-lg-4 d-flex flex-column align-items-start mb-4 px-4"
