--- a/src/app/customers/customers.component.css
+++ b/src/app/customers/customers.component.css
@@ -1,19 +1,22 @@
 .text-justify {
-    text-align: justify;
-  }
-  .post-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 100%;
-  }
-  .post-content {
-    flex-grow: 1;
-  }
-  .post-footer {
-    display: flex;
-    align-items: center;
-    margin-top: 1rem;
-    margin-bottom: 2rem;
-    
-  }
+  text-align: justify;
+}
+.post-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
+.post-content {
+  flex-grow: 1;
+}
+.post-footer {
+  display: flex;
+  align-items: center;
+  margin-top: 1rem;
+  margin-bottom: 2rem;
+}
+
+.customMargin {
+  margin-top: -3rem;
+}
